<resources>
    <string name="post_hint">Что у вас нового?</string>
    <string name="save_post">Опубликовать</string>
    <string name="cancel_edit_hint">Редактирование...</string>
    <string name="cancel_edit">Отменить</string>
    <string name="add_post">Добавить пост</string>

    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Fedotov\\nGroup: 3.2ISiP2</string>
    <string name="avatar_description">Аватар автора</string>
    <string name="menu_description">Меню</string>

    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>

    <string name="like_description">Нравится</string>
    <string name="share_description">Поделиться</string>
    <string name="views_description">Просмотры</string>

    <string name="edit_post_title">Новый пост</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>

    <string name="edit_post_edit_title">Редактировать пост</string>
    <string name="error_empty_content">Текст не может быть пустым</string>

    <string name="play_video">Воспроизвести видео</string>
    <string name="open_external">Открыть во внешнем приложении</string>
    <string name="error_no_video_app">Не найдено приложение для просмотра видео</string>
    <string name="error_cannot_open_video">Не удалось открыть видео</string>
    <string name="share_post_via">Поделиться через</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_removed">Поделиться через</string>
</resources>