<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/published"
        android:text="ШУБЫ" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:text="21 мая в 18:36" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/menu_description"
        app:icon="@drawable/ic_menu"
        app:iconGravity="textStart"
        style="@style/Widget.AppTheme.MenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:text="Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов." />

    <LinearLayout
        android:id="@+id/link_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#1A000000"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content">

        <TextView
            android:id="@+id/link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ШУБЫ"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="shubi.ru"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_block">

        <!-- Кнопка лайка (Toggle Button) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/like_description"
            android:text="0"
            app:icon="@drawable/ic_like_border"
            app:iconGravity="textStart" />

        <!-- Кнопка репоста -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/share_description"
            android:text="0"
            app:icon="@drawable/ic_share"
            app:iconGravity="textStart" />

        <!-- Кнопка просмотров (не кликабельная, просто для отображения) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/views"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clickable="false"
            android:contentDescription="@string/views_description"
            android:focusable="false"
            android:text="0"
            app:icon="@drawable/ic_visibility"
            app:iconGravity="textStart" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


